<resources>
    <string name="app_name">MypakDriver</string>
    <string name="places_api_key">AIzaSyCNs1wH7F3CUq1_tYEkN_9BjfAvKeJmBLw</string>
    <string name="welcome_to_mypack">Welcome to Mypack Driver</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has been the industry\'s standard dummy text ever since Lorem Ipsum has been the industry\'s standard dummy text ever since</string>
    <string name="get_started">Get Started</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_with_google">Sign up with google</string>
    <string name="sign_up_with_facebook">Sign up with Facebook</string>
    <string name="sign_up_with_gmail">Sign up with gmail</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login">Login</string>
    <string name="already_have_an_acc">Already have an account?</string>
    <string name="email_or_user">Email or username</string>
    <string name="email">Email</string>
    <string name="update_your_dev_status_here">Update Your Delivery Status Here : </string>
    <string name="you_are_not_allowed_to_see_other_bids">You are not allowed to see other bids</string>
    <string name="enter_email">Enter email</string>
    <string name="password">Password</string>
    <string name="fogrot_password">Forgot Password ?</string>
    <string name="log_in_without_password">Log In Without Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="please_enter_price">Please enter price</string>
    <string name="please_select_pickup_date">Please select pickup date</string>
    <string name="please_select_dropoff_date">Please select dropoff date</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="phone_no">Phone number</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="verify">Verify</string>
    <string name="please_enter_username">Please enter username</string>
    <string name="please_enter_email_add">Please enter email address</string>
    <string name="please_select_add">Please select address</string>
    <string name="please_enterlandmark_add">Please enter landmark address</string>
    <string name="please_enter_pass">Please enter password</string>
    <string name="please_enter_conf_pass">Please enter confirm password</string>
    <string name="password_validation_text">Password should be greater than 4 digits</string>
    <string name="password_not_match">Password not matched</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="please_check_internet">Please check your internet connection!</string>
    <string name="invalid_number">Invalid phone number</string>
    <string name="please_enter_phone_add">Please enter phone number</string>
    <string name="please_wait">Please wait...</string>
    <string name="enter_6_digit_code">Please enter 6 digit verification code</string>
    <string name="please_enter_otp">Please enter Otp</string>
    <string name="otp_verification">Otp Verification</string>
    <string name="please_enter_new_pass">Please enter new passsword</string>
    <string name="please_enter_old_pass">Please enter old password</string>
    <string name="success">Success</string>
    <string name="enter_the_otp_send_to_8645657896">Enter the otp send to +8645657896</string>
    <string name="you_can_resend_your_code_if_it_dosen_t_arrive_in_0_43">You can resend your code if it dosen\'t arrive in 0:43</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="submit">Submit</string>
    <string name="what_s_the_size">What\'s the size</string>
    <string name="fit_in_a_pocket">Fit in a pocket</string>
    <string name="my_requests">My Requests</string>
    <string name="pickup_address">Pickup Address</string>
    <string name="dropoff_address">Dropoff Address</string>
    <string name="dropoff_dummyaddress">Akshya Nagar 1st Block 1st Cross, Rammurthy nagar, Bangalore-560016</string>
    <string name="pickup_dummyaddress">9278 Victoria Street NORTH LONDON N28 1CW 175 King Street MILTON KEYNES MK30 4RC</string>
    <string name="parcel_detail">Parcel Detail</string>
    <string name="my_sendings">My Sendings</string>
    <string name="messages">Messages</string>
<!--    <string name="maps_api_key">AIzaSyD5KJs-4W2v_SJM5oJrwrC92KCcu34m9do</string>-->
    <string name="maps_api_key">AIzaSyCalQXp2J_JZC-BVRx0syHhX-fOcYjwJek</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="my_profile">My Profile</string>
    <string name="recipient_s_name">Recipient\'s Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="type_a_message">Type a message</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="add_parcel">Add Parcel Request</string>
    <string name="select_pick_up_address">Select Pickup address</string>
    <string name="select_drop_off_address">Select dropoff address</string>
    <string name="select_pickup_date">Select pickup date</string>
    <string name="select_drop_date">Select dropoff date</string>
    <string name="mobile_number">Mobile number</string>
    <string name="item_detail">Item Detail</string>
    <string name="reset_link_msg">Resend link sent to your Mail-Id</string>
    <string name="delivery_instructions">Delivery Instruction</string>
    <string name="upload">Upload</string>
    <string name="logout_text">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="pickup_date">Pickup Date</string>
    <string name="dropoff_date">Dropoff Date</string>
    <string name="applied_bids">Applied Bids</string>
    <string name="price">Price</string>
    <string name="my_transports">My Transports</string>
    <string name="user_requests">User Requests</string>
    <string name="bid_now">Bid Now</string>
    <string name="apply_bid">Apply Bid</string>
    <string name="enter_price">Enter price</string>
    <string name="comment_opt">Comment (optional)</string>
    <string name="apply">Apply</string>
    <string name="chat">Chat</string>
    <string name="update">Update</string>
    <string name="ok">Ok</string>
    <string name="enter_otp">Enter otp</string>
    <string name="resend">Resend</string>
    <string name="no_request_found">No Requests Found</string>
    <string name="comments">Comment</string>
    <string name="remove">Remove</string>
    <string name="bid_detail">Bid Details</string>
    <string name="close_app_text">Are you sure you want to close the app?</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="dev_address">Delivery Address</string>
    <string name="quantity">Quantity :</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date_and_time">Date and Time</string>
    <string name="total_distance">Total Distance</string>
    <string name="total_price">Total Price</string>
    <string name="preferred_vehicle">Preferred Vehicle</string>
    <string name="recipient_name">Recipient\'s Name</string>
    <string name="recipient_s_mobile_number">Recipient\'s Mobile Number</string>
    <string name="navigate_to_map">Navigate To Map</string>
    <string name="scan_the_qr_code_when_you_delivered_the_order">Scan QR code when order is delivered</string>
    <string name="no_chat_found">No Chat Found</string>
    <string name="please_write_a_message">Please write a message</string>

    <string-array name="parcel_quantity">
        <item>Select Quantity</item>
        <item>Less then 1KG</item>
        <item>1KG - 5KG</item>
        <item>5KG - 10KG</item>
        <item>10KG - 15KG</item>
        <item>15KG - 20KG</item>
        <item>20KG - 25KG</item>
        <item>25KG - 30KG</item>
        <item>30KG - 35KG</item>
        <item>35KG - 40KG</item>
        <item>40KG Above</item>
    </string-array>

    <string-array name="vehicle_type">
        <item>Select Vehicle Type</item>
        <item>Bicycle</item>
        <item>Motorcycle</item>
        <item>VAN</item>
        <item>Any</item>
    </string-array>

    <string-array name="parcel_item_category">
        <item>Select Item Category</item>
        <item>Document</item>
        <item>Food</item>
        <item>Cloting</item>
        <item>Electronics</item>
        <item>Fragile</item>
        <item>Medical</item>
        <item>Other</item>
    </string-array>
</resources>