<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250sdp"
            android:gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/orange_wel_back">

            <ImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:src="@drawable/orange_logo_icon"/>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_18sdp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/circular_bold"
            android:text="@string/welcome_to_mypack"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/circular_regular"
            android:text="@string/dummy_text"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_15sdp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_50sdp"
            android:fontFamily="@font/circular_bold"
            android:text="@string/get_started"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:background="@drawable/orange_back_10"/>

    </LinearLayout>

</layout>