<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="data"
            type="com.mypakdriver.models.ModelOrderHistory.Result" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_5sdp"
        app:contentPadding="@dimen/_5sdp"
        android:elevation="@dimen/_10sdp"
        android:layout_margin="@dimen/_5sdp"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:fontFamily="@font/circular_bold"
                android:text="@string/pickup_address"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/black"
                android:inputType="textVisiblePassword" />

            <TextView
                android:id="@+id/tvPickupAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/circular_regular"
                android:layout_marginTop="@dimen/_3sdp"
                android:drawableLeft="@drawable/ic_blue_location"
                android:textSize="@dimen/_9sdp"
                android:drawablePadding="@dimen/_5sdp"
                android:text="@{data.pickup_location}"
                android:textColor="@color/gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/circular_bold"
                android:text="@string/dev_address"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/black"
                android:inputType="textVisiblePassword" />

            <TextView
                android:id="@+id/DropOff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/circular_regular"
                android:layout_marginTop="@dimen/_3sdp"
                android:drawableLeft="@drawable/ic_blue_location"
                android:textSize="@dimen/_9sdp"
                android:drawablePadding="@dimen/_5sdp"
                android:text="@{data.drop_location}"
                android:textColor="@color/gray" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quantity"
                        android:textStyle="bold"
                        android:fontFamily="@font/circular_bold"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:textSize="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:inputType="textVisiblePassword" />

                    <TextView
                        android:id="@+id/tvQuantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:textStyle="bold"
                        android:fontFamily="@font/circular_regular"
                        android:text="@{data.parcel_quantity}"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:textSize="@dimen/_10sdp"
                        android:textColor="@color/orange3"
                        android:inputType="textVisiblePassword" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tvStatus"
                    android:background="@drawable/orange_outline_back"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/circular_bold"
                    android:inputType="textVisiblePassword"
                    android:padding="@dimen/_8sdp"
                    android:text="Accept"
                    android:visibility="gone"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp"
                    android:textStyle="bold"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:id="@+id/llARP"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btAcceptOrChat"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="@dimen/_30sdp"
                    android:background="@drawable/green_back_10"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:textStyle="bold"
                    android:layout_centerVertical="true"
                    android:paddingRight="@dimen/_15sdp"
                    android:paddingLeft="@dimen/_15sdp"
                    android:textSize="@dimen/_10sdp"
                    android:fontFamily="@font/circular_bold"
                    android:text="@string/accept" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btRejectOrShowOnMap"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:background="@drawable/orange_back_10"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:textStyle="bold"
                    android:layout_centerVertical="true"
                    android:paddingRight="@dimen/_15sdp"
                    android:paddingLeft="@dimen/_15sdp"
                    android:textSize="@dimen/_10sdp"
                    android:fontFamily="@font/circular_bold"
                    android:text="@string/reject" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btParcel"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:background="@drawable/green_back_10"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:textStyle="bold"
                    android:layout_centerVertical="true"
                    android:paddingRight="@dimen/_15sdp"
                    android:paddingLeft="@dimen/_15sdp"
                    android:textSize="@dimen/_10sdp"
                    android:fontFamily="@font/circular_bold"
                    android:text="@string/parcel_detail" />

            </LinearLayout>

            <Button
                android:id="@+id/btScanCode"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/orange_back_10"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:visibility="gone"
                android:layout_marginTop="@dimen/_5sdp"
                android:includeFontPadding="false"
                android:textStyle="bold"
                android:layout_gravity="end"
                android:layout_centerVertical="true"
                android:paddingRight="@dimen/_15sdp"
                android:paddingLeft="@dimen/_15sdp"
                android:textSize="@dimen/_10sdp"
                android:fontFamily="@font/circular_bold"
                android:text="@string/scan_the_qr_code_when_you_delivered_the_order" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</layout>