<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp">

                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:src="@drawable/ic_back_black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/circular_bold"
                    android:text="@string/apply_bid"
                    android:textAllCaps="false"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sdp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/gray2"/>

            <ImageView
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:src="@drawable/orange_logo_icon"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvPickUpAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                app:contentPadding="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp">

                <EditText
                    android:id="@+id/etPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_price"
                    android:textSize="@dimen/_10sdp"
                    android:inputType="number"
                    android:maxLength="7"
                    android:fontFamily="@font/circular_regular"
                    android:drawablePadding="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:padding="@dimen/_10sdp"
                    android:background="@null"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvPickUpDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                app:contentPadding="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp">

                <EditText
                    android:id="@+id/etPickDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/select_pickup_date"
                    android:textSize="@dimen/_10sdp"
                    android:focusableInTouchMode="false"
                    android:focusable="false"
                    android:cursorVisible="false"
                    android:inputType="textVisiblePassword"
                    android:fontFamily="@font/circular_regular"
                    android:singleLine="true"
                    android:drawablePadding="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:padding="@dimen/_10sdp"
                    android:background="@null"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvDropOffDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                app:contentPadding="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp">

                <EditText
                    android:id="@+id/etDropDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/select_drop_date"
                    android:textSize="@dimen/_10sdp"
                    android:focusableInTouchMode="false"
                    android:focusable="false"
                    android:cursorVisible="false"
                    android:inputType="textVisiblePassword"
                    android:fontFamily="@font/circular_regular"
                    android:singleLine="true"
                    android:drawablePadding="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:padding="@dimen/_10sdp"
                    android:background="@null"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvReciName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                app:contentPadding="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp">

                <EditText
                    android:id="@+id/etComment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/comment_opt"
                    android:textSize="@dimen/_10sdp"
                    android:inputType="textVisiblePassword|textMultiLine"
                    android:fontFamily="@font/circular_regular"
                    android:drawablePadding="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:padding="@dimen/_10sdp"
                    android:background="@null"/>

            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btApply"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/orange_back_10"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:fontFamily="@font/circular_bold"
                android:layout_margin="@dimen/_30sdp"
                android:text="@string/apply" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>